added some solution, final version